Add download component

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -19,6 +19,7 @@
                 <button style="margin-top: 10px; background-color: #1976D2" mat-raised-button color="primary" (click)="onDareRangeSelectedButton(startDateInput.value, endDateInput.value)">Ingresar</button>
 
                 <button style="margin-top: 10px; background-color: #1976D2" mat-raised-button color="primary" (click)="onUpdateRangeClick()">Real Time</button>
+                <app-descarga></app-descarga>
             </ul>
         </div>
     </mat-toolbar-row>
