added WS status card

--- a/src/app/modules/f2-horno1/f2-horno1.component.html
+++ b/src/app/modules/f2-horno1/f2-horno1.component.html
@@ -1,92 +1,50 @@
-<br>
-
-<div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px" class="stats-cards">
-    <mat-card>
-
-        <p class="equipo1"> Estado Equipo 1 </p>
-        <app-f2-horno1-cs class="statusCard"></app-f2-horno1-cs>
-
-    </mat-card>
-    <mat-card>
-
-        <p class="equipo1"> Estado Equipo 2 </p>
-        <app-f2-horno2-cs class="statusCard"></app-f2-horno2-cs>
-
-    </mat-card>
-    <mat-card>
-
-        <p class="equipo1"> Estado silo cohete </p>
-        <app-f2-silo-cohete-cs class="statusCard"></app-f2-silo-cohete-cs>
-        
-    </mat-card>
-    <mat-card>
-
-        <p class="equipo1"> Estado silo norte </p>
-        <app-f2-silo-norte-cs class="statusCard"></app-f2-silo-norte-cs>
-        
-    </mat-card>
-    <mat-card>
-
-        <p class="equipo1"> Estado silo sur </p>
-        <app-f2-silo-sur-cs class="statusCard"></app-f2-silo-sur-cs>
-        
-    </mat-card>
-    <mat-card>
-
-        <p class="equipo1"> Estado T.Termicos Horno 1</p>
-        <app-f2-tt-horno1-cs class="statusCard"></app-f2-tt-horno1-cs>
-        
-    </mat-card>
-    <mat-card>
-
-        <p class="equipo1"> Estado T.Termicos Horno 2</p>
-        <app-f2-tt-horno2-cs class="statusCard"></app-f2-tt-horno2-cs>
-        
-    </mat-card>
+<br />
+<div>
+  <app-f2-connection-status class="statusCard"></app-f2-connection-status>
 </div>
-<br>
+<br />
 
 <mat-divider></mat-divider>
 
-<br>
+<br />
 <!--<button (click)="download_f2_horno1_corriente()">Descargar CSV</button>-->
 <div>
-    <app-f2-horno1-potencia></app-f2-horno1-potencia>
+  <app-f2-horno1-potencia></app-f2-horno1-potencia>
 </div>
-<br>
+<br />
 <mat-divider></mat-divider>
 
-<br>
+<br />
 
 <div>
-    <app-f2-horno1-voltage></app-f2-horno1-voltage>
+  <app-f2-horno1-voltage></app-f2-horno1-voltage>
 </div>
-<br>
+<br />
 
 <mat-divider></mat-divider>
 
-<br>
+<br />
 
 <div>
-    <app-f2-horno1-energia></app-f2-horno1-energia>
+  <app-f2-horno1-energia></app-f2-horno1-energia>
 </div>
-<br>
+<br />
 
 <mat-divider></mat-divider>
 
-<br>
+<br />
 
 <div>
-    <app-f2-horno1-corriente></app-f2-horno1-corriente>
+  <app-f2-horno1-corriente></app-f2-horno1-corriente>
 </div>
-<br>
+<br />
 
 <mat-divider></mat-divider>
 
-<br>
+<br />
 
-<br>
+<br />
 
 <mat-divider></mat-divider>
 
-<br>
+<br />
