--- a/src/app/modules/f2-ttermicos/f2-ttermicos.component.html
+++ b/src/app/modules/f2-ttermicos/f2-ttermicos.component.html
@@ -1,47 +1,6 @@
 <br>
-<div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px" class="stats-cards">
-    <mat-card>
-
-        <p class="equipo1"> Estado Equipo 1 </p>
-        <app-f2-horno1-cs class="statusCard"></app-f2-horno1-cs>
-
-    </mat-card>
-    <mat-card>
-
-        <p class="equipo1"> Estado Equipo 2 </p>
-        <app-f2-horno2-cs class="statusCard"></app-f2-horno2-cs>
-
-    </mat-card>
-    <mat-card>
-
-        <p class="equipo1"> Estado silo cohete </p>
-        <app-f2-silo-cohete-cs class="statusCard"></app-f2-silo-cohete-cs>
-        
-    </mat-card>
-    <mat-card>
-
-        <p class="equipo1"> Estado silo norte </p>
-        <app-f2-silo-norte-cs class="statusCard"></app-f2-silo-norte-cs>
-        
-    </mat-card>
-    <mat-card>
-
-        <p class="equipo1"> Estado silo sur </p>
-        <app-f2-silo-sur-cs class="statusCard"></app-f2-silo-sur-cs>
-        
-    </mat-card>
-    <mat-card>
-
-        <p class="equipo1"> Estado T.Termicos Horno 1</p>
-        <app-f2-tt-horno1-cs class="statusCard"></app-f2-tt-horno1-cs>
-        
-    </mat-card>
-    <mat-card>
-
-        <p class="equipo1"> Estado T.Termicos Horno 2</p>
-        <app-f2-tt-horno2-cs class="statusCard"></app-f2-tt-horno2-cs>
-        
-    </mat-card>
+<div>
+    <app-f2-connection-status class="statusCard"></app-f2-connection-status>
 </div>
 <br>
 
