--- a/src/app/shared/components/descarga/descarga.component.html
+++ b/src/app/shared/components/descarga/descarga.component.html
@@ -1,1 +1,3 @@
-<button (click)="downloadData()">Descargar datos</button>
+<button type="button" class="btn btn-warning" (click)="downloadData()">
+  Descargar datos
+</button>
