--- a/src/app/modules/f2-silos/f2-silos.component.html
+++ b/src/app/modules/f2-silos/f2-silos.component.html
@@ -1,66 +1,51 @@
-<br />
+<br>
 <div>
-  <app-f2-connection-status class="statusCard"></app-f2-connection-status>
+    <app-f2-connection-status class="statusCard"></app-f2-connection-status>
 </div>
-<br />
+<br>
 
 <mat-divider></mat-divider>
 
-<br />
-<div
-  fxLayout="row"
-  fxLayoutAlign="space-between center"
-  fxLayoutGap="10px"
-  class="stats-cards"
->
-  <mat-card fxFlex="80">
-    <app-f2-silo-cohete></app-f2-silo-cohete>
-  </mat-card>
-  <mat-card fxFlex="20">
-    <app-f2-silo-cohete-barra></app-f2-silo-cohete-barra>
-  </mat-card>
+<br>
+<div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="10px" class="stats-cards">
+    <mat-card fxFlex="80">
+        <app-f2-silo-cohete></app-f2-silo-cohete>
+    </mat-card>
+    <mat-card fxFlex="20">
+        <app-f2-silo-cohete-barra></app-f2-silo-cohete-barra>
+    </mat-card>
 </div>
-<br />
+<br>
 
 <mat-divider></mat-divider>
 
-<br />
+<br>
 
-<div
-  fxLayout="row"
-  fxLayoutAlign="space-between center"
-  fxLayoutGap="10px"
-  class="stats-cards"
->
-  <mat-card fxFlex="80">
-    <app-f2-silo-sur></app-f2-silo-sur>
-  </mat-card>
-
-  <mat-card fxFlex="20">
-    <app-f2-silo-sur-barra></app-f2-silo-sur-barra>
-  </mat-card>
+<div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="10px" class="stats-cards">
+    <mat-card fxFlex="80">
+        <app-f2-silo-sur></app-f2-silo-sur>
+    </mat-card>
+   
+    <mat-card fxFlex="20">
+        <app-f2-silo-sur-barra></app-f2-silo-sur-barra>
+    </mat-card>
 </div>
-<br />
+<br>
 
 <mat-divider></mat-divider>
 
-<br />
-<div
-  fxLayout="row"
-  fxLayoutAlign="space-between center"
-  fxLayoutGap="10px"
-  class="stats-cards"
->
-  <mat-card fxFlex="80">
-    <app-f2-silo-norte></app-f2-silo-norte>
-  </mat-card>
-
-  <mat-card fxFlex="20">
-    <app-f2-silo-norte-barra></app-f2-silo-norte-barra>
-  </mat-card>
+<br>
+<div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="10px" class="stats-cards">
+    <mat-card fxFlex="80">
+        <app-f2-silo-norte></app-f2-silo-norte>
+    </mat-card>
+   
+    <mat-card fxFlex="20">
+        <app-f2-silo-norte-barra></app-f2-silo-norte-barra>
+    </mat-card>
 </div>
-<br />
+<br>
 
 <mat-divider></mat-divider>
 
-<br />
+<br>
