--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,50 +1,58 @@
 <!--<mat-sidenav-container class="app-container">-->
 <!--<mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="true" class="app-sidenav">
     -->
-<br>
+<br />
 <mat-divider></mat-divider>
-<br>
+<br />
 <mat-list-item routerLink="#">
-    <mat-icon> dashboard</mat-icon><span>Dashboard</span>
+  <mat-icon> dashboard</mat-icon><span>Dashboard</span>
+  <br />
 </mat-list-item>
-<mat-expansion-panel [class.mat-elevation-z0]="true">
-    <mat-expansion-panel-header>
-        <mat-panel-title>Fundición 1</mat-panel-title>
-    </mat-expansion-panel-header>
-    <mat-nav-list>
-        <a mat-list-item class="selectors" routerLink="#">
-            <mat-icon>arrow_right_alt</mat-icon><span>Horno 1</span>
-        </a>
-        <a mat-list-item class="selectors" routerLink="#">
-            <mat-icon>arrow_right_alt</mat-icon><span>Horno 2</span>
-        </a>
-        <a mat-list-item class="selectors" routerLink="#">
-            <mat-icon>arrow_right_alt</mat-icon><span>Silos</span>
-        </a>
-        <a mat-list-item class="selectors" routerLink="#">
-            <mat-icon>arrow_right_alt</mat-icon><span>T.Térmicos</span>
-        </a>
-    </mat-nav-list>
-</mat-expansion-panel>
-<mat-expansion-panel [class.mat-elevation-z0]="true">
-    <mat-expansion-panel-header>
-        <mat-panel-title>Fundición 2</mat-panel-title>
-    </mat-expansion-panel-header>
-    <mat-nav-list>
-        <a mat-list-item class="selectors" routerLink="/f2-horno1">
-            <span>Equipo 1</span>
-        </a>
-        <a mat-list-item class="selectors" routerLink="/f2-horno2">
-            <span>Equipo 2</span>
-        </a>
-        <a mat-list-item class="selectors" routerLink="/f2-silos">
-            <span>Silos</span>
-        </a>
-        <a mat-list-item class="selectors" routerLink="/f2-ttermicos">
-            <span>T.Térmicos</span>
-        </a>
-    </mat-nav-list>
-</mat-expansion-panel>
-<br>
+<br />
 <mat-divider></mat-divider>
-<br>
+<mat-nav-list>
+  <a mat-list-item class="selectors" routerLink="principal">
+    <mat-icon>home</mat-icon><span>Status</span>
+  </a>
+</mat-nav-list>
+<mat-divider></mat-divider>
+<mat-expansion-panel [class.mat-elevation-z0]="true">
+  <mat-expansion-panel-header>
+    <mat-panel-title>Fundición 1</mat-panel-title>
+  </mat-expansion-panel-header>
+  <mat-nav-list>
+    <a mat-list-item class="selectors" routerLink="#">
+      <mat-icon>arrow_right_alt</mat-icon><span>Horno 1</span>
+    </a>
+    <a mat-list-item class="selectors" routerLink="#">
+      <mat-icon>arrow_right_alt</mat-icon><span>Horno 2</span>
+    </a>
+    <a mat-list-item class="selectors" routerLink="#">
+      <mat-icon>arrow_right_alt</mat-icon><span>Silos</span>
+    </a>
+    <a mat-list-item class="selectors" routerLink="#">
+      <mat-icon>arrow_right_alt</mat-icon><span>T.Térmicos</span>
+    </a>
+  </mat-nav-list>
+</mat-expansion-panel>
+<mat-expansion-panel [class.mat-elevation-z0]="true">
+  <mat-expansion-panel-header>
+    <mat-panel-title>Fundición 2</mat-panel-title>
+  </mat-expansion-panel-header>
+  <mat-nav-list>
+    <a mat-list-item class="selectors" routerLink="/f2-horno1">
+      <span>Equipo 1</span>
+    </a>
+    <a mat-list-item class="selectors" routerLink="/f2-horno2">
+      <span>Equipo 2</span>
+    </a>
+    <a mat-list-item class="selectors" routerLink="/f2-silos">
+      <span>Silos</span>
+    </a>
+    <a mat-list-item class="selectors" routerLink="/f2-ttermicos">
+      <span>T.Térmicos</span>
+    </a>
+  </mat-nav-list>
+</mat-expansion-panel>
+<mat-divider></mat-divider>
+<br />
